@@ -758,6 +758,7 @@ define,	   0x179,	0x17A,		0x179,		"LBL_EFFECTS",					"int"
 define,	   0x17A,	0x17B,		0x17A,		"LBL_PREVIOUS",					"int"
 define,	   0x128,	0x129,		0x128,		"LBL_MORE",					"int"
 define,	   0x537700,	0x541D30,	0x537780,	"play_sound_effect",				"void (__cdecl *) (int sound_effect)"
+repl call, 0x578CD9,	0x585DF3,	0x578C49,	"Tile_check_water_for_navigator_cell_coloring",	""
 
 ignore,	   0x5FC710,	0x0,		0x0,		"PCX_Image_create_and_init_jgl_image",		"int (__fastcall *) (PCX_Image * this, int edx, int width, int height, int bit_depth, int param_4, int param_5, int param_6)"
 ignore,	   0x5FCC50,	0x0,		0x0,		"PCX_Image_draw_region_to_location",		"void (__fastcall *) (PCX_Image * this, int edx, PCX_Image * canvas, int src_x, int src_y, int dest_x, int dest_y, int width, int height)"
