@@ -127,6 +127,9 @@ do_not_unassign_workers_from_polluted_tiles = false
 ; and a capital at size 7+ uses the graphic for cities 13+. This option turns that off, so capitals use the standard city graphics.
 do_not_make_capital_cities_appear_larger = false
 
+; Tints coast and sea tiles on the minimap based on the culture that controls them, like is normally done for land tiles.
+show_territory_colors_on_water_tiles_in_minimap = false
+
 [====================]
 [=== OPTIMIZATION ===]
 [====================]
